users/example_disallowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-users-disallowed
  namespace: default
  labels:
    app: nginx-users
spec:
  securityContext:
    supplementalGroups:
      - 1
    fsGroup: 1
  containers:
    - name: nginx
      image: nginx
      securityContext:
        runAsUser: 0
        runAsGroup: 1
